--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@prisma/client": "^5.0.0",
     "@types/bcrypt": "^5.0.2",
+    "@types/morgan": "^1.9.9",
     "bcrypt": "^5.1.1",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
@@ -31,6 +32,7 @@
     "express": "^4.18.2",
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.0",
+    "morgan": "^1.10.0",
     "winston": "^3.8.2"
   },
   "devDependencies": {
